--- a/apps/web/src/components/ui/SectionTransition/SectionTransition.module.scss
+++ b/apps/web/src/components/ui/SectionTransition/SectionTransition.module.scss
@@ -2,6 +2,7 @@
 
 .transition {
   position: relative;
+  z-index: 2;
   width: 100%;
 }
 
