--- a/apps/web/src/styles/settings/_variables.scss
+++ b/apps/web/src/styles/settings/_variables.scss
@@ -64,7 +64,7 @@ $bp-ultra: 1920px;
   // --- Z-Index Scale ---
   --z-base: 0;
   --z-above: 1;
-  --z-canvas: 5;
+  --z-canvas: 1;
   --z-header: 100;
   --z-overlay: 200;
   --z-modal: 300;
